docs: create a documentation for '/client'
